crates/no_expect_outside_tests/ui/fail_expect_in_fn.stderr
error: `.expect(..)` is not allowed outside tests or doctests
  --> $DIR/fail_expect_in_fn.rs:5:19
   |
LL |     let _result = value.expect("value should exist");
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Function `process` is not annotated with a recognised test attribute.
   = note: Receiver type: `std::option::Option<i32>`.
   = help: Propagate the error or handle the `None`/`Err` case explicitly.
note: the lint level is defined here
  --> $DIR/fail_expect_in_fn.rs:1:9
   |
LL | #![deny(no_expect_outside_tests)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: `.expect(..)` is not allowed outside tests or doctests
  --> $DIR/fail_expect_in_fn.rs:10:13
   |
LL |     let _ = result.expect("result should be ok");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Function `fail_result` is not annotated with a recognised test attribute.
   = note: Receiver type: `std::result::Result<(), &str>`.
   = help: Propagate the error or handle the `None`/`Err` case explicitly.

error: aborting due to 2 previous errors

